Adding /remove to allow singleton Robot to be removed from within the Sinatra server.
