# ruby_robot/lib/ruby_robot/webapp.rb
@@ -218,5 +218,10 @@ if !USE_SWAGGER_EXPOSER
     redirect '/index.html'
   end
 end
+
+  post '/remove' do
+    @@robot = nil
+    [200]
+  end
 end
 end
